make page headers consistent

--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -22,6 +22,7 @@ html
     header.gpl-header
       h1.h1
         a(href="/") Great Pattern Library
+      h2.h2 Version #{version}
       nav.gpl-nav
         -
           let navLinks = [
