removed legacy header/footer from pattern

--- a/backend/views/pages/patterns.pug
+++ b/backend/views/pages/patterns.pug
@@ -6,9 +6,10 @@ block content
   p Example of patterns used across great.gov.uk
 
   section(id="section-layout")
-  h2.h2 Layout
-  +codeblock('html', 'Header', patterns.header)
-  +codeblock('html', 'Footer', patterns.footer)
+  // @TODO re-instate once new header/footer has been researched/designed/tested/
+  //- h2.h2 Layout
+  //- +codeblock('html', 'Header', patterns.header)
+  //- +codeblock('html', 'Footer', patterns.footer)
 
   section(id="section-typography")
   h2.h2 Typography
