--- a/backend/views/layout/footer.pug
+++ b/backend/views/layout/footer.pug
@@ -1,3 +1,4 @@
+//- //- legacy footer DO NOT USE
 footer(role=contentinfo)
   .footer.background--great-blue.soft--top
     .outer-container
@@ -49,7 +50,7 @@ footer(role=contentinfo)
                 img(src="images/hm_government_logo_horizontal.svg" alt="HM Government logo")/
             li.float--left.soft-half--left.footer-links--border
               a.link.link--white(href="https://www.great.gov.uk/" title="part of great.gov.uk")
-                span.hide-mobile.font-light-grey.font-light Part of 
+                span.hide-mobile.font-light-grey.font-light Part of
                 span.font-regular great.gov.uk
         .footer-copy.font-light-grey.font-xsmall
           p
