add PR amendments

--- a/backend/views/patterns/steps--on-grid.pug
+++ b/backend/views/patterns/steps--on-grid.pug
@@ -4,7 +4,7 @@ include ../../../frontend/components/core/templates/mixins.pug
     include ./steps
   .grid-container
     .column-full
-      .panel.panel--chevron-top.panel--border-top-none
+      .panel.panel--full-width.panel--chevron-top.panel--border-top-none
         h3.h3 Title
         .grid-container.grid-container--inner
           .column-one-half
