--- a/frontend/styles/components/_panels.scss
+++ b/frontend/styles/components/_panels.scss
@@ -5,7 +5,7 @@
   border-top: solid $black .5rem;
   margin-bottom: 1rem;
   padding: 2rem;
-  width: 100%;
+  width: auto;
 
   &--action {
     border-top-color: $great-red;
@@ -17,6 +17,11 @@
 
   &--border-top-none {
     border-top: 0;
+  }
+
+  &--full-width {
+    margin-left: -2rem;
+    margin-right: -2rem;
   }
 
   &--chevron-top {
