--- a/frontend/styles/components/_steps.scss
+++ b/frontend/styles/components/_steps.scss
@@ -7,16 +7,16 @@
       @include grid-column(4);
       margin-bottom: 0;
     }
-    margin-bottom: 15px;
     position: relative;
 
     &__img__container {
+      height: 200px;
       text-align: center;
     }
 
     &__img {
       display: inline-block;
-      height: 200px;
+      max-height: 200px;
       width: 200px;
     }
 
@@ -26,7 +26,7 @@
       height: 132px;
       justify-content: flex-start;
       line-height: 132px;
-      margin-top: 15px;
+      margin: 30px 0;
     }
 
     &__number,
@@ -55,16 +55,24 @@
     }
     @media (min-width: 980px) {
       &::after {
-        background: url('/images/steps-arrow.svg');
+        background: url('/images/steps-arrow.svg') no-repeat;
         background-size: contain;
         content: '';
         display: block;
-        height: 80px;
+        height: 40px;
         position: absolute;
         right: 0;
-        top: 115px;
+        top: 100px;
         transform: translate3d(50%, -50%, 0);
-        width: 45px;
+        width: 22px;
+      }
+
+    }
+
+    @media (min-width: 1200px) {
+      &::after {
+        height: 80px;
+        width: 44px;
       }
 
     }
