auto height on step text container below desktop

--- a/backend/views/patterns/steps.pug
+++ b/backend/views/patterns/steps.pug
@@ -7,7 +7,7 @@ include ../../../frontend/components/core/templates/mixins.pug
       .steps__item__number 1
       .steps__item__text__content
         +h4('Step 1')
-        +p('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
+        +p--no-margin-bottom('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
   .steps__item
     .steps__item__img__container
       img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
@@ -15,7 +15,7 @@ include ../../../frontend/components/core/templates/mixins.pug
       .steps__item__number 2
       .steps__item__text__content
         +h4('Step 2')
-        +p('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
+        +p--no-margin-bottom('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
   .steps__item
     .steps__item__img__container
       img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
@@ -23,4 +23,4 @@ include ../../../frontend/components/core/templates/mixins.pug
       .steps__item__number 3
       .steps__item__text__content
         +h4('Step 3')
-        +p('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
+        +p--no-margin-bottom('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
