--- a/frontend/components/core/templates/mixins.pug
+++ b/frontend/components/core/templates/mixins.pug
@@ -13,6 +13,9 @@ mixin h4(text, attrs)
 mixin p(text, attrs)
   p=text
 
+mixin p--no-margin-bottom(text, attrs)
+  p.no-margin-bottom=text
+
 mixin p--xsmall(text, attrs)
   p.font-xsmall=text
 
