--- a/frontend/styles/components/_panels.scss
+++ b/frontend/styles/components/_panels.scss
@@ -1,7 +1,7 @@
 .panel {
   // @extend %col-12;
 
-  background-color: $stone;
+  background-color: $light-grey;
   border-top: solid $black .5rem;
   margin-bottom: 1rem;
   padding: 2rem;
@@ -20,8 +20,8 @@
   }
 
   &--full-width {
-    margin-left: -2rem;
-    margin-right: -2rem;
+    margin-left: -3rem;
+    margin-right: -3rem;
   }
 
   &--chevron-top {
