--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -5,14 +5,14 @@ block content
   section(style='text-align:center;')
     h1.h1 Overview
     p This library is a set of shared UI components and patterns used across the great.gov.uk sites.
-    p This library has been built with the following teams in mind:
+    p It has been built with the following teams in mind:
     ul
       li <abbr title="Export readiness">EXRED</abbr> - Export readiness
       li <abbr title="Export opportunities">EXOPPS</abbr> - Export opportunities
-      li <abbr title="Find a Buyer">FAB</abbr> - Find a Buyer
-      li <abbr title="Selling Online Overseas">SOO</abbr> - Selling Online Overseas
+      li <abbr title="Find a Buyer">FAB</abbr> - Find a buyer
+      li <abbr title="Selling Online Overseas">SOO</abbr> - Selling online overseas
     br
-    p Please use the navigation above the view the different sections
+    p Please use the navigation above to view the different sections.
 
 block append foot_scripts
   // home scripts
