--- a/backend/views/pages/blocks-media.pug
+++ b/backend/views/pages/blocks-media.pug
@@ -2,7 +2,7 @@ extends ../layout/base.pug
 include ../../../frontend/components/core/templates/mixins.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
-  h1.h1 Blocks &amp; Media
+  h1.h1 Blocks and media
 
   section(id="section-panels")
   h2.h2 Blocks
