--- a/backend/views/pages/colour-typography.pug
+++ b/backend/views/pages/colour-typography.pug
@@ -2,7 +2,7 @@ extends ../layout/base.pug
 include ../../../frontend/components/core/templates/mixins.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
-  h1.h1 Colour &amp; Typography
+  h1.h1 Colour and typography
 
   section(id="section-colours")
   h2.h2 Colours
