--- a/backend/views/pages/layout-breakpoints.pug
+++ b/backend/views/pages/layout-breakpoints.pug
@@ -2,7 +2,7 @@ extends ../layout/base.pug
 include ../../../frontend/components/core/templates/mixins.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
-  h1.h1 Layouts &amp; Breakpoints
+  h1.h1 Layouts and breakpoints
 
   section(id="section-breakpoints")
     h2.h2 Breakpoints
