--- a/backend/views/pages/links-buttons.pug
+++ b/backend/views/pages/links-buttons.pug
@@ -2,7 +2,7 @@ extends ../layout/base.pug
 include ../../../frontend/components/core/templates/mixins.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
-  h1.h1 Links &amp; Buttons
+  h1.h1 Links and buttons
 
   section(id="section-links")
   h2.h2 Links
