--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -27,11 +27,11 @@ html
         -
           let navLinks = [
             {href: '/', text: 'Home'},
-            {href: '/layout-breakpoints/', text: 'Layout &amp; Breakpoints'},
-            {href: '/colours-typography/', text: 'Colour &amp; Typography'},
-            {href: '/links-buttons/', text: 'Links &amp; Buttons'},
-            {href: '/forms-inputs/', text: 'Forms &amp; Inputs'},
-            {href: '/blocks-media/', text: 'Blocks &amp; Media'},
+            {href: '/layout-breakpoints/', text: 'Layout and breakpoints'},
+            {href: '/colours-typography/', text: 'Colour and typography'},
+            {href: '/links-buttons/', text: 'Links and buttons'},
+            {href: '/forms-inputs/', text: 'Forms and inputs'},
+            {href: '/blocks-media/', text: 'Blocks and media'},
             {href: '/patterns/', text: 'Patterns'},
           ]
           navLinks.forEach((item, i, arr) => {
