add base hero banner

--- a/backend/views/pages/patterns.pug
+++ b/backend/views/pages/patterns.pug
@@ -22,6 +22,8 @@ block content
 
   +codeblock('html', 'Steps (on grid)', patterns.stepsOnGrid)
 
+  +codeblock('html', 'Hero banner', patterns.heroBanner)
+
 block append foot_scripts
   // home scripts
   script(src="/scripts/pages/home.js")
