--- a/frontend/styles/elements/_buttons.scss
+++ b/frontend/styles/elements/_buttons.scss
@@ -56,7 +56,7 @@
 
   &-large {
     font-size: $h3-font-size-mobile;
-    padding: 15px 35px;
+    padding: $gds-base-spacing-unit 35px;
   }
 
   &-close {
