--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -24,6 +24,7 @@
 //components
 @import 'components/navigation';
 @import 'components/footer';
+@import 'components/hero-banner';
 @import 'components/steps';
 @import 'components/panels';
 
