--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -5,6 +5,8 @@ $brand-font-family: 'Roboto', arial, helvetica, sans-serif;
 $base-spacing-unit: 20px;
 $half-spacing-unit: $base-spacing-unit / 2;
 
+$gds-base-spacing-unit: 15px;
+
 // BRAND COLOURS
 $great-blue: #1e1348;
 $flag-red: #b00d23;
