--- a/frontend/styles/components/_steps.scss
+++ b/frontend/styles/components/_steps.scss
@@ -48,7 +48,7 @@ $text-row-height: 132px;
       font-weight: 500;
       letter-spacing: -1px;
       line-height: 100px;
-      margin-right: 15px;
+      margin-right: $gds-base-spacing-unit;
       position: relative;
       text-align: right;
       top: -8px;
