--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -1,6 +1,9 @@
 @import 'neat/grid-settings';
 @import 'neat';
 
+// govuk elements
+@import 'govuk_elements/govuk-elements';
+
 //utilities
 @import 'utilities/reset';
 @import 'utilities/vars';
