--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -114,3 +114,9 @@ $icons: (
 );
 
 $image-path: '/images/';
+
+// Form
+$form-field-border-color: #6f777b;
+$form-field-background: #f6f4f1;
+$form-label-color: #4a4a4a;
+$form-error-color: $great-red;
