--- a/backend/views/partials/buttons__large.pug
+++ b/backend/views/partials/buttons__large.pug
@@ -2,5 +2,5 @@ include ../../../frontend/components/core/templates/mixins.pug
 -
   let attrs1 = {colour: 'blue', size: 'large'}
   let attrs2 = {colour: 'red', size: 'large'}
-+button('Button', attrs1)
-+button('Button', attrs2)
++button('Button')(class='button-blue button-large')
++button('Button')(class='button-blue button-large')
