--- a/backend/views/partials/p__large.pug
+++ b/backend/views/partials/p__large.pug
@@ -1,2 +1,2 @@
 include ../../../frontend/components/core/templates/mixins.pug
-+p--large('This is large text (18px).')
++p__large('This is large text (18px).')
