--- a/backend/views/partials/p__small.pug
+++ b/backend/views/partials/p__small.pug
@@ -1,2 +1,2 @@
 include ../../../frontend/components/core/templates/mixins.pug
-+p--xlarge('This is large text (24px).')
++p__small('This is small text (15px).')
