--- a/backend/views/partials/p__xlarge.pug
+++ b/backend/views/partials/p__xlarge.pug
@@ -1,2 +1,2 @@
 include ../../../frontend/components/core/templates/mixins.pug
-+p--xsmall('This is extra small text (14px).')
++p__xlarge('This is large text (24px).')
