--- a/backend/views/patterns/steps__on_grid.pug
+++ b/backend/views/patterns/steps__on_grid.pug
@@ -10,4 +10,4 @@ include ../../../frontend/components/core/templates/mixins.pug
           .column-one-half
             p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           .column-one-half
-            +button('Button text', {colour:'red'})
+            +button('Button text', {colour:'red'})(class='button-red')
