--- a/frontend/components/core/templates/mixins.pug
+++ b/frontend/components/core/templates/mixins.pug
@@ -49,4 +49,4 @@ mixin button(text, attrs)
   //     aExtraClasses.push(`button-${attrs.size}`)
   //   }
   //   sExtraClasses = aExtraClasses.join(' ')
-  button(href='attrs[href]', title='attrs[title]', class=''+sExtraClasses)=text
+  button(href='attrs[href]', title='attrs[title]}')=text
