--- a/backend/views/partials/p__xsmall.pug
+++ b/backend/views/partials/p__xsmall.pug
@@ -1,2 +1,2 @@
 include ../../../frontend/components/core/templates/mixins.pug
-+p--small('This is small text (15px).')
++p__xsmall('This is extra small text (14px).')
