--- a/backend/views/patterns/typography.pug
+++ b/backend/views/patterns/typography.pug
@@ -1,18 +1,18 @@
 include ../../../frontend/components/core/templates/mixins.pug
 +h1('This is a title heading (48px)')
-+p--xlarge('This is an intro paragraph at 24px. Good preparation makes for great exporting. Making sure you have the right resources and skills in place before you start saves time and reduces your workload in the long run. It can also lead to larger profits and less risk for your company.')
++p__xlarge('This is an intro paragraph at 24px. Good preparation makes for great exporting. Making sure you have the right resources and skills in place before you start saves time and reduces your workload in the long run. It can also lead to larger profits and less risk for your company.')
 
 +h2('A 32px heading. Get your product ready')
-+p--large('This is a body copy paragraph at 18px. First establish whether there are opportunities for your product or service outside the UK. This includes determining which countries offer the biggest demand for your product. Think about your unique selling point and what features of your product and service will really appeal to customers in the market you’re targeting.')
++p__large('This is a body copy paragraph at 18px. First establish whether there are opportunities for your product or service outside the UK. This includes determining which countries offer the biggest demand for your product. Think about your unique selling point and what features of your product and service will really appeal to customers in the market you’re targeting.')
 
 +h3('A 24px heading. Use an online marketplace')
 <div class="panel panel--action">
-  +p--large('Researching a new market is essential for any business, especially if the market is overseas. It can help you plan effectively and maximise your profits.')
+  +p__large('Researching a new market is essential for any business, especially if the market is overseas. It can help you plan effectively and maximise your profits.')
 </div>
 
 +p('This is a body copy paragraph at 16px. Online marketplaces are websites where buyers and sellers can do business electronically, and transactions are processed by the marketplace operator.')
 
-+p--xsmall('This is a label at 14 px')
++p__xsmall('This is a label at 14 px')
 -
   let btnAtrs1 = {colour: 'blue'}
 +button('Button text', btnAtrs1)
