--- a/frontend/styles/utilities/_typography.scss
+++ b/frontend/styles/utilities/_typography.scss
@@ -29,7 +29,7 @@ body {
 %h1 {
   @extend %medium;
   @include bottom-margin(0);
-  @include font($h1-font-size-mobile, -1px, 58px);
+  @include font($h1-font-size-mobile, -1px, 55px);
 
   @include tablet {
     @include bottom-margin(1);
@@ -46,7 +46,7 @@ body {
 
 %h2 {
   @include bottom-margin(1);
-  @include font($h2-font-size-mobile, -.6px, 32px);
+  @include font($h2-font-size-mobile, -.7px, 32px);
   @include tablet {
     @include font($h2-font-size-desktop, -.6px, 40px);
   }
@@ -123,10 +123,19 @@ body {
 
   &-small {
     font-size: $small;
+    line-height: 20px;
   }
 
   &-xsmall {
     @include font($xsmall, normal, $xsmall);
+  }
+
+  &-quote {
+    color: $grey;
+    font-family: Georgia;
+    font-size: 24px;
+    font-weight: regular;
+    line-height: 32px;
   }
 }
 
