--- a/backend/views/pages/colour-typography.pug
+++ b/backend/views/pages/colour-typography.pug
@@ -50,16 +50,17 @@ block content
 
   +codeblock('html', 'Level 3 header', headers.h3)
 
-  // h4 deprecated - removed in next minor version - v0.3
-  //+codeblock('html', 'Level 4 header', headers.h4)
+  +codeblock('html', 'Level 4 header', headers.h4)
 
   +codeblock('html', 'Paragraph', paragraphs.p)
+
+  +codeblock('html', 'Paragraph (lead)', paragraphs['p--lead'])
 
   +codeblock('html', 'Paragraph (large)', paragraphs['p--large'])
 
   +codeblock('html', 'Paragraph (small)', paragraphs['p--small'])
 
-  // xsmall deprecated - removed in next minor version - v0.3
+  //- xsmall deprecated - removed in next minor version - v0.3
   //- +codeblock('html', 'Paragraph (extra small)', paragraphs['p--xsmall'])
 
   +codeblock('html', 'Blockquote', quotes['blockquote'])
