--- a/backend/views/partials/p--lead.pug
+++ b/backend/views/partials/p--lead.pug
@@ -1,2 +1,2 @@
 include ../../../frontend/components/core/templates/mixins.pug
-+p--xlarge('This is large text (24px).')
++p--lead('This is large text (24px).')
