--- a/backend/views/patterns/typography.pug
+++ b/backend/views/patterns/typography.pug
@@ -1,6 +1,6 @@
 include ../../../frontend/components/core/templates/mixins.pug
 +h1('This is a title heading (48px)')
-+p--xlarge('This is an intro paragraph at 24px. Good preparation makes for great exporting. Making sure you have the right resources and skills in place before you start saves time and reduces your workload in the long run. It can also lead to larger profits and less risk for your company.')
++p--lead('This is an intro paragraph at 24px. Good preparation makes for great exporting. Making sure you have the right resources and skills in place before you start saves time and reduces your workload in the long run. It can also lead to larger profits and less risk for your company.')
 
 +h2('A 32px heading. Get your product ready')
 +p--large('This is a body copy paragraph at 18px. First establish whether there are opportunities for your product or service outside the UK. This includes determining which countries offer the biggest demand for your product. Think about your unique selling point and what features of your product and service will really appeal to customers in the market you’re targeting.')
