--- a/frontend/styles/great-pattern-library.scss
+++ b/frontend/styles/great-pattern-library.scss
@@ -25,7 +25,7 @@
 @import 'elements/images';
 
 //components
-@import 'components/navigation';
+@import 'components/header';
 @import 'components/footer';
 @import 'components/steps';
 @import 'components/panels';
