change css file from main.css to great-pattern-library.css

--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -12,7 +12,7 @@ html
       link(rel="icon", type="image/png", href="/images/favicon.ico")
       link(rel='apple-touch-icon' href='/apple-touch-icon.png')/
       // Place favicon.ico in the root directory
-      link(rel='stylesheet' href='/styles/main.css')/
+      link(rel='stylesheet' href='/styles/great-pattern-library.css')/
       link(rel='stylesheet' href='/styles/library.css')/
       link(rel='stylesheet' href='/vendor/prism-twilight.css')/
   body
