rename mq mixin to mobile-up and add borderless panel to blocks page

--- a/backend/views/pages/blocks-media.pug
+++ b/backend/views/pages/blocks-media.pug
@@ -23,6 +23,8 @@ block content
   </div>
   `)
 
+  +codeblock('html', 'Extra Panels',panels['panel--no-border'])
+
   section(id="section-media")
   h2.h2 Media
   +codeblock('html', 'Images',`
