add panel no border to blocks page

--- a/backend/views/partials/blocks/panel--no-border.pug
+++ b/backend/views/partials/blocks/panel--no-border.pug
@@ -1,9 +1,13 @@
-.grid-container
-  .column-full
-    .panel.panel--full-width.panel--chevron-top.panel--border-top-none
-      h3.h3 Title
-      .grid-container.grid-container--inner
-        .column-one-half
-          p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        .column-one-half
-          button.button.button-red(href="attrs[href]" title="attrs[title]") Button text
+<div class="grid-container">
+    <div class="column-full">
+        <div class="panel panel--full-width panel--chevron-top panel--border-top-none">
+            <h3 class="h3">Title</h3>
+            <div class="grid-container grid-container--inner">
+                <div class="column-one-half">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div class="column-one-half"><button class="button button-red" href="attrs[href]" title="attrs[title]">Button text</button></div>
+            </div>
+        </div>
+    </div>
+</div>
