--- a/backend/views/patterns/typography.pug
+++ b/backend/views/patterns/typography.pug
@@ -10,9 +10,9 @@ include ../../../frontend/components/core/templates/mixins.pug
   +p--large('Researching a new market is essential for any business, especially if the market is overseas. It can help you plan effectively and maximise your profits.')
 </div>
 
-+p('This is a body copy paragraph at 16px. Online marketplaces are websites where buyers and sellers can do business electronically, and transactions are processed by the marketplace operator.')
++p('This is a body copy paragraph at 15px. Online marketplaces are websites where buyers and sellers can do business electronically, and transactions are processed by the marketplace operator.')
 
-+p--xsmall('This is a label at 14 px')
++p--small('This is a label at 13 px')
 -
   let btnAtrs1 = {colour: 'blue'}
 +button('Button text', btnAtrs1)
