Add sixths to column

--- a/backend/views/pages/layout-breakpoints.pug
+++ b/backend/views/pages/layout-breakpoints.pug
@@ -66,6 +66,13 @@ block content
       <div class="column-debug column-one-quarter">Desktop 1/4</div>
       <div class="column-debug column-one-quarter">Desktop 1/4</div>
 
+      <div class="column-debug column-one-sixth">Desktop 1/6</div>
+      <div class="column-debug column-one-sixth">Desktop 1/6</div>
+      <div class="column-debug column-one-sixth">Desktop 1/6</div>
+      <div class="column-debug column-one-sixth">Desktop 1/6</div>
+      <div class="column-debug column-one-sixth">Desktop 1/6</div>
+      <div class="column-debug column-one-sixth">Desktop 1/6</div>
+
       <div class="column-debug column-one-twelfth">1/12</div>
       <div class="column-debug column-one-twelfth">1/12</div>
       <div class="column-debug column-one-twelfth">1/12</div>
