--- a/frontend/styles/utilities/_grid.scss
+++ b/frontend/styles/utilities/_grid.scss
@@ -14,6 +14,7 @@
 .column-one-third,
 .column-two-third,
 .column-one-quarter,
+.column-one-sixth,
 .column-one-twelfth {
   margin-bottom: $gutter;
 }
@@ -45,6 +46,13 @@
 
 .column-one-quarter {
   @include grid-column(3);
+  @include mobile {
+    @include grid-column(12);
+  }
+}
+
+.column-one-sixth {
+  @include grid-column(2);
   @include mobile {
     @include grid-column(12);
   }
