--- a/backend/views/pages/header.pug
+++ b/backend/views/pages/header.pug
@@ -1,41 +1,82 @@
 extends ../layout/base.pug
 
 block content
-  header(role='banner')
+  header.globalHeader(role='banner')
     .background--dark-navy.cf
-      .outer-container
-        ul.list-inline
-          li.list-separators
-            a.logo-hmg(href='https://www.gov.uk/', title='Go to the GOV.UK homepage')
-              img(alt='HM Government logo', src='/images/HM_Government_logo_horizontal.svg')
-          li
-            a.link--white(href='https://great.gov.uk/', title='Part of great.gov.uk')
-              span.hide-mobile
-                | Part of
-              span.hide-mobile
-              strong great.gov.uk
+      nav.topBar
+        .outer-container
+          ul.list-inline
+            li.list-separators
+              a.topBar__logo-hmg(href='https://www.gov.uk/', title='Go to the GOV.UK homepage')
+                img(alt='HM Government logo', src='/images/HM_Government_logo_horizontal.svg')
+            li
+              a.topBar__logo-tagline(href='https://great.gov.uk/', title='Part of great.gov.uk')
+                span.hide-mobile
+                  | Part of
+                strong.hide-mobil great.gov.uk
     .background--great-blue.cf
       .outer-container
         a.float--left(href='https://www.export.great.gov.uk/', title='Go to the Exporting is GREAT homepage')
-          img.eig-logo(alt='Exporting is GREAT logo', src='/images/EiG_logo_horizontal.svg')
+          img.globalHeader__eiglogo(alt='Exporting is GREAT logo', src='/images/EiG_logo_horizontal.svg')
     .background--dark-blue.cf
       .outer-container
         nav.navigationBar
-          ul.list-inline
-            li
-              a.navigationBar-link.background--light-blue(title='new to exporting', href='https://www.export.great.gov.uk/new/') New to exporting
-            li
-              a.navigationBar-link.background--light-blue.font-regular(title='occasional exporter', href='https://www.export.great.gov.uk/occasional/') Occasional exporter
-            li
-              a.navigationBar-link.background--light-blue.font-regular(title='regular exporter', href='https://www.export.great.gov.uk/regular/') Regular exporter
-            li
-              a.navigationBar-link(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities') Export opportunities
-            li
-              a.navigationBar-link(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer') Find a buyer
-            li
-              a.navigation-main-link.navigation-main-link--secondary.navigation-main-link--active(href='https://selling-online-overseas.export.great.gov.uk/markets/', title='Selling online overseas') Selling online overseas
-            li
-              a.navigation-main-link.navigation-main-link--secondary(href='https://export.great.gov.uk/get-finance/', title='Get finance') Get finance
-            li
-              a.navigation-main-link.navigation-main-link--secondary(href='https://events.trade.gov.uk/', title='Events') Events
+          ul.navigationBar__list
+            li.navigationBar__list__item
+              a.navigationBar__link(title='new to exporting', href='https://www.export.great.gov.uk/new/') New to exporting
+            li.navigationBar__list__item
+              a.navigationBar__link(title='occasional exporter', href='https://www.export.great.gov.uk/occasional/') Occasional exporter
+            li.navigationBar__list__item
+              a.navigationBar__link(title='regular exporter', href='https://www.export.great.gov.uk/regular/') Regular exporter
+            li.navigationBar__list__item
+              a.navigationBar__link(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities') Export opportunities
+            li.navigationBar__list__item
+              a.navigationBar__link(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer') Find a buyer
+            li.navigationBar__list__item
+              a.navigationBar__link.active(href='https://selling-online-overseas.export.great.gov.uk/markets/', title='Selling online overseas') Selling online overseas
+            li.navigationBar__list__item
+              a.navigationBar__link(href='https://export.great.gov.uk/get-finance/', title='Get finance') Get finance
+            li.navigationBar__list__item
+              a.navigationBar__link(href='https://events.trade.gov.uk/', title='Events') Events
+        a.menuToggle(href='', title='More')
+          i.icon
+          All
+
+    .navigation-toggle.background--dark-navy.navigation-toggle--open
+      .outer-container
+        .col-3
+          .navigation-toggle-services-section
+            h3.font-large.font-light-grey.font-light.push--bottom.hide-mobile Export readiness
+            ul.font-regular
+              li.navigation-toggle-item.navigation-toggle-services
+                a(title='new to exporting', href='https://www.export.great.gov.uk/new/') New to exporting
+              li.navigation-toggle-item.navigation-toggle-services
+                a(title='occasional exporter', href='https://www.export.great.gov.uk/occasional/') Occasional exporter
+              li.navigation-toggle-item.navigation-toggle-services
+                a.last(title='regular exporter', href='https://www.export.great.gov.uk/regular/') Regular exporter
+        .col-3
+          h3.font-large.font-light-grey.font-light.push--bottom.hide-mobile.soft--left Online tools
+          ul.navigation-toggle-middle
+            li.navigation-toggle-item
+              a(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities') Export opportunities
+            li.navigation-toggle-item
+              a.navigation-toggle-active(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer') Find a buyer
+            li.navigation-toggle-item
+              a(href='https://selling-online-overseas.export.great.gov.uk/markets/', title='Selling online overseas') Selling online overseas
+        .col-3
+          h3.font-large.font-light-grey.font-light.push--bottom.hide-mobile.soft--left Other support
+          ul.navigation-toggle-middle
+            li.navigation-toggle-item
+              a(href='https://export.great.gov.uk/get-finance/', title='Get finance') Get finance
+            li.navigation-toggle-item
+              a(href='https://events.trade.gov.uk/', title='Events') Events
+        .col-3
+          h3.font-large.font-light-grey.font-light.soft--left.push--bottom.hide-mobile About us
+          ul.navigation-toggle-middle
+            li.navigation-toggle-item
+              a(href='https://www.export.great.gov.uk/about/', title='About great.gov.uk') About great.gov.uk
+            li.navigation-toggle-item
+              a.last(href='https://contact-us.export.great.gov.uk/selling_online_overseas', title='Contact us') Contact us
+
+
       
