--- a/frontend/styles/components/_header.scss
+++ b/frontend/styles/components/_header.scss
@@ -1,10 +1,70 @@
+.globalHeader {
+  &__eiglogo {
+    padding: 17px 0 4px;
+  }
+}
+
+.topBar {
+  height: 2em;
+  &__logo-hmg {
+    display: block;
+    padding: 0 5px 0 2px;
+    position: relative;
+    top: 4px;
+    img {
+      display: block;
+    }
+  }
+  &__logo-tagline {
+    color: $porcelian;
+    display: block;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 300;
+    position: relative;
+    top: 4px;
+    span {
+      margin-right: 5px;
+    }
+    &:hover {
+      border-bottom: 1px dashed;
+      color: $white;
+      margin-bottom: -1px;
+    }
+    strong {
+      color: $white;
+      font-weight: 400;
+    }
+  }
+}
+
+/* font-weight: 300 */
+
 .navigationBar {
-	&-link {
-    margin: 0px 3px;
+  min-height: 38px;
+  &__list {
+    position: relative;
+    list-style: none;
+    &__item {
+      display: inline-block;
+    }
+  }
+	&__link {
+    display:block;
+    position: relative;
+    color: $white;
+    font-size: 15px;
+    font-weight: 400;
     padding: 5px 8px 4px;
+    margin: 3px;
+    outline: 3px solid $dark-blue;
+    background-color: $dark-blue;
+    &__primary {
+      outline: 3px solid $light-blue;
+      background-color: $light-blue;
+    }
     &:hover,
     &--active {
-
       &:after {
         border-top: 3px solid $great-red;
         content: '';
@@ -14,9 +74,31 @@
         width: 100%;
       }
     }
-
-    &--secondary {
+    &:focus {
+        outline: 3px solid $focus-yellow;
+    }
+    &-secondary {
 
     }
   }
 }
+
+.menuToggle {
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  background-color: #00549f;
+  border-left: 2px solid #000;
+  border-radius: 0;
+  font-size: 15px;
+  font-weight: 400;
+  padding: 8px 10px 5px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: 0;
+  &__icon {
+
+  }
+}
+
