--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -13,6 +13,7 @@ $dark-white: #fafafa;
 $grey: #333;
 $mid-grey: #999;
 $light-grey: #d8d8d8;
+$porcelian: #E1E0DF;
 $purple: #4f0b7b;
 $mid-blue: #00549f;
 $aqua: #007ea3;
